0028621: Visualization - AIS_ColoredShape::UnsetTransparency() is not implemented